# trees

./: LICENSE  README.md  pyproject.toml
trees/: dummy_file.py  random_forest.py
