[tool.poetry]
name = "trees"
version = "0.1.0"
description = ""
authors = ["Agamemnon Krasoulis <agamemnon.krasoulis@intelligencia.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.3"
scikit-learn = "^1.6.1"


[tool.poetry.group.dev.dependencies]
ipython = "^9.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
